# data-brew

./: .gitignore  README.md
Airflow-Patterns/: const.tf  ec2-airflow.tf  my-ip.tf  network.tf  variables.tf
Airflow-Patterns-dags/: .gitignore  README.md
Apache-Pinot/: .gitignore  docker-compose.yml
Apache-Superset/: docker-compose.yml
KSQLDB/: 01_create_stream.sql  02_create_table.sql  03_transformations.sql  05_top_n_users.sql  06_suspicious_activity.sql  README.md  sample_data.json
LLM-RAG-SQL/: main.py  requirements.txt
Marquez/: README.md  demo-data.json  docker-compose.yml
Real-Time-Analytics/: const.tf  data_accounts.tf  ec2-airflow-sg.tf  ec2-airflow.tf  network.tf
Red-Shift/: README.md
StackStorm/: README.md  (+1 more)
orchestration/dagster-asset-platform/: .env.example  .gitignore  README.md  backfill.py  docker-compose.yml  health.sh  pyproject.toml  validate.py  workspace.yaml
orchestration/dagster-asset-platform/config/: dagster.yaml
orchestration/dagster-asset-platform/dbt_project/: dbt_project.yml  profiles.yml
orchestration/dagster-asset-platform/dbt_project/models/marts/: _schema.yml  mart_channel_performance.sql  mart_orders.sql
orchestration/dagster-asset-platform/dbt_project/models/staging/: stg_order_lines.sql
orchestration/dagster-asset-platform/platform/: checks.py  definitions.py  jobs.py  partitions.py  policies.py  resources.py  schedules.py  sensors.py
orchestration/dagster-asset-platform/platform/assets/: __init__.py  curated.py  dbt.py  raw.py
orchestration/dagster-asset-platform/tests/: test_definitions_load.py
(+356 files in other folders)
