[project]
name = "dagster-asset-platform"
version = "0.1.0"
description = "Asset-oriented orchestration PoC built on Dagster"
requires-python = ">=3.11"
dependencies = [
  "dagster~=1.8",
  "dagster-webserver~=1.8",
  "dagster-postgres~=0.24",
  "dagster-duckdb~=0.24",
  "dagster-duckdb-pandas~=0.24",
  "dagster-dbt~=0.24",
  "dbt-core~=1.8",
  "dbt-duckdb~=1.8",
  "pandas~=2.2",
  "pydantic~=2.7",
]

[project.optional-dependencies]
test = [
  "pytest~=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["platform*"]

[tool.dagster]
module_name = "platform.definitions"
